[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[workspace]
resolver = "2"
members = [
  # -- Application Libraries
  "crates/libs/lib-auth",
  "crates/libs/lib-core",
  "crates/libs/lib-rpc",
  "crates/libs/lib-utils",

  # -- Application services
  "crates/services/web-server",

  # -- Tools
  "crates/tools/gen-key",
]
