[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[workspace]
resolver = "2"
members = [
  # -- Application Libraries
  "crates/libs/lib-auth",
  "crates/libs/lib-core",
  "crates/libs/lib-rpc",
  "crates/libs/lib-utils",

  # -- Application services
  "crates/services/web-server",

  # -- Tools
  "crates/tools/gen-key",
]

# NOTE: Only the crates that are utilized in two or more sub-crates and benefit from global management
#       are handled in workspace.dependencies. Other strategies may also be valid.
[workspace.dependencies]
# -- Serde
serde_with = { version = "3", features = ["time_0_3"] }
# -- Data
modql = { version = "0.3.4", features = ["with-sea-query"] }
# -- JSON-RPC
# Lock to specific version during 0.1.x
rpc-router = { version = "=0.1.3" }
# -- Others
derive_more = { version = "0.99", features = ["from", "display"] }
