[package]
name = "lib-rpc"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false # Docs tests are disabled

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core" }
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6.1"
# -- Data
modql = { version = "0.3.4", features = ["with-sea-query"] }
# -- Others
derive_more = { version = "0.99", features = ["from"] }
