[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-auth = { path = "../../libs/lib-auth" }
lib-rpc = { path = "../../libs/lib-rpc" }
lib-core = { path = "../../libs/lib-core" }
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# -- Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6.1"
# -- Web
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["fs"] }
tower-cookies = "0.10.0"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
uuid = { version = "1", features = ["v4", "fast-rng"] }
strum_macros = "0.26.1"
derive_more = { version = "0.99", features = ["from"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "3"
